# django-fox-tools

./: README.md  pyproject.toml  pytest.ini  requirements.txt  runtests.py
fox_tools/: __init__.py  apps.py  mixins.py  settings.py  test.py  tool.py
fox_tools/data/: __init__.py  pool.py  reader.py  readers.py  record_set.py  relation.py
fox_tools/management/commands/: data_summary.py  http_scan.py
fox_tools/serializers/: __init__.py  fields.py  model_list.py
fox_tools/tasks/: http_request.py  http_scanner.py  import_model.py  iter.py
tests/: apps.py  serializers.py  test_settings.py
tests/models/: data.py
tests/tests/: __init__.py  combinations.py
tests/tests/data/: __init__.py  model_record_set.py  pool.py  reader.py  readers.py  record_set.py  relation.py  samples.py
tests/tests/serializers/: __init__.py  fields.py  relational.py
tests/tests/tasks/: __init__.py  http_request.py  iter.py  pool.py
tools/: combinations.py
tools/data/: model_record_set.py  record.py
tools/management/commands/: data_summary.py  http_scan.py
tools/tasks/: __init__.py  base.py  http_request.py  http_scanner.py  pool.py  viewsets.py
